# JniCompressImage

app/: build.gradle
app/src/androidTest/java/com/jni/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/jni/jnidemo/: MainActivity.java  PhotoViewActivity.java
app/src/main/java/com/jni/jnidemo/utils/: Util.java
app/src/main/res/layout/: activity_main.xml  activity_photo_view.xml
app/src/test/java/com/jni/jnidemo/: ExampleUnitTest.java
libjpeg/: CMakeLists.txt  build.gradle
libjpeg/src/androidTest/java/com/jni/libjpeg/: ExampleInstrumentedTest.java
libjpeg/src/main/: AndroidManifest.xml
libjpeg/src/main/cpp/: compress_image.cpp
libjpeg/src/main/java/com/jni/libjpeg/utils/: CompressImageUtil.java  FileUtil.java
libjpeg/src/test/java/com/jni/libjpeg/: ExampleUnitTest.java
